--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -19,6 +19,8 @@ a
 
 nav
   background-color: white
+  .navbar-collapse.collapse
+    right: 0
 
 .diagram-component
   width: 400px
@@ -37,6 +39,3 @@ nav
   padding: 1rem 1.5rem
   background-color: white
   @extend .shadow-custom
-
-   
-
