Agregue editor de codigo

--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -39,3 +39,14 @@ nav
   padding: 1rem 1.5rem
   background-color: white
   @extend .shadow-custom
+
+.cm-s-material .CodeMirror-gutters
+  background-color: #2e4549 !important
+
+.cm-s-material .CodeMirror-guttermarker, .cm-s-material .CodeMirror-guttermarker-subtle, .cm-s-material .CodeMirror-linenumber
+    color: #a9c5d2 !important
+
+.cm-s-material.CodeMirror 
+    background-color: #3c4e57 !important
+    color: #EEFFFF !important
+
