Analizador lexico, sintactico y semantico listo

--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -11,6 +11,10 @@ html
 body
   background-color: #fbfbfb
 
+svg 
+  height: 100%
+  width: 100%
+
 main
   margin-top: 90px
 
@@ -50,3 +54,6 @@ nav
     background-color: #3c4e57 !important
     color: #EEFFFF !important
 
+.CodeMirror 
+  border: 1px solid #eee;
+  height: auto;
